--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Filippo Ferrero</title>
+    <meta name="description" content="portfolio, personal website of Filippo Ferrero. Graphic Packaging and Type Designer">  
+
+</head>
+<body>
+    
+
+<h1>Welcome to my website</h1>
+
+
+
+
+</body>
+</html>
