--- a/base-5.html
+++ b/base-5.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Web page with responsive layout</title>
-    <meta name="description" content="A sample web page with a linked stylessheet for responsive layout."> 
+    <title>Web page with fluid typography</title>
+    <meta name="description" content="A sample web page with responsive layout and fluid typography in a linked stylessheet for responsive layout list and bullets.">
 
-
-<link href="base-3.css" rel="stylesheet">
+<link href="base-5.css" rel="stylesheet">
 
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -42,17 +41,25 @@
 
 <p>Fusce porta auctor dolor sed fringilla. In eget ornare magna. Duis eleifend libero in purus efficitur, at sagittis velit fringilla. Proin a erat pharetra, convallis eros vel, pellentesque justo. Integer feugiat, urna eu varius varius, lorem est fermentum ipsum, id volutpat ante odio vitae tellus. Vivamus vel ex sit amet dolor tempor laoreet in nec metus. Proin pharetra, justo ac pharetra tincidunt, sapien orci laoreet libero, dapibus pellentesque dui felis eu nisi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque neque risus, maximus tincidunt lacinia in, sollicitudin at ligula. Aliquam a leo blandit, venenatis orci ultrices, tristique magna. Praesent elementum tincidunt pellentesque. Nam at laoreet ex.</p>
 
-<h5>PORTITORE</h5> 
+<h2>PORTITORE</h2> 
 
 <p>Ut vel erat urna. Aliquam erat volutpat. Sed ornare nec lacus ac tincidunt. Vestibulum blandit ex nec efficitur maximus. Etiam at elit vehicula, vulputate urna ac, eleifend arcu. Nunc efficitur eros nunc, aliquam elementum mi eleifend nec. Sed eleifend nisl id ex accumsan aliquam.</p>
 
-<p>Sed rhoncus eleifend orci, vitae malesuada justo mattis ut. Donec ante diam, scelerisque sed fermentum eu, posuere ut risus. Suspendisse ornare eros purus, sit amet pharetra nisl placerat sit amet. Ut orci dui, vestibulum vel lacus blandit, condimentum mollis mi. Suspendisse ultricies suscipit ligula, a efficitur magna mattis nec. Nam eu congue enim. Maecenas lacinia urna sed sem luctus, at tristique dui elementum. Maecenas tincidunt tortor condimentum interdum finibus. Ut tristique at tellus quis porttitor. Suspendisse potenti. Cras id sollicitudin purus, ut varius quam. Fusce et semper felis, non ullamcorper lectus. Integer vel molestie sem. Duis nisl arcu, tristique eu tempus sit amet, blandit et velit.</p>
+<ul>
+	<li>Ut vel erat urna. Aliquam erat volutpat. Sed ornare nec lacus ac tincidunt. Vestibulum blandit ex nec efficitur maximus. </li>
+	<li>Ut vel erat urna. Aliquam erat volutpat. Sed ornare nec lacus ac tincidunt. Vestibulum blandit ex nec efficitur maximus. </li>
+	<li>Ut vel erat urna. Aliquam erat volutpat. Sed ornare nec lacus ac tincidunt. Vestibulum blandit ex nec efficitur maximus. </li>
+	<li>Ut vel erat urna. Aliquam erat volutpat. Sed ornare nec lacus ac tincidunt. Vestibulum blandit ex nec efficitur maximus. </li>
+	<li>Ut vel erat urna. Aliquam erat volutpat. Sed ornare nec lacus ac tincidunt. Vestibulum blandit ex nec efficitur maximus. </li>
+</ul>
 
-
-
-
-
-
+<ol>
+	<li>Ut vel erat urna. Aliquam erat volutpat. Sed ornare nec lacus ac tincidunt. Vestibulum blandit ex nec efficitur maximus. </li>
+	<li>Ut vel erat urna. Aliquam erat volutpat. Sed ornare nec lacus ac tincidunt. Vestibulum blandit ex nec efficitur maximus. </li>
+	<li>Ut vel erat urna. Aliquam erat volutpat. Sed ornare nec lacus ac tincidunt. Vestibulum blandit ex nec efficitur maximus. </li>
+	<li>Ut vel erat urna. Aliquam erat volutpat. Sed ornare nec lacus ac tincidunt. Vestibulum blandit ex nec efficitur maximus. </li>
+	<li>Ut vel erat urna. Aliquam erat volutpat. Sed ornare nec lacus ac tincidunt. Vestibulum blandit ex nec efficitur maximus. </li>
+</ol>>
 
 
 
