--- a/index.html
+++ b/index.html
@@ -7,11 +7,41 @@
     <title>Filippo Ferrero</title>
     <meta name="description" content="portfolio, personal website of Filippo Ferrero. Graphic Packaging and Type Designer">  
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-50714507-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-50714507-1');
+</script>
+
+
 </head>
 <body>
     
 
 <h1>Welcome to my website</h1>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
