--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,10 +5,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Web Design Portfolio | Mary Smith</title>
+	<title> Graphic Designer | Filippo Ferrero </title>
 	<meta name="description" content="Some of my recent website projects.">
 
-	<meta name="author" content="Mary Smith">
+	<meta name="author" content="Filippo Ferrero">
 
 	<link rel="stylesheet" href="assets/css/portfolio-2.css">
 
@@ -27,10 +27,10 @@
 	window.cookieconsent.initialise({
 	  "palette": {
 		"popup": {
-		  "background": "#383b75"
+		  "background": " #004080"
 		},
 		"button": {
-		  "background": "#f1d600"
+		  "background": " #004080"
 		}
 	  },
 	  "theme": "classic",
@@ -42,14 +42,15 @@
 
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-122243940-1"></script>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-50714507-1"></script>
 	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
+  	window.dataLayer = window.dataLayer || [];
+  	function gtag(){dataLayer.push(arguments);}
+  	gtag('js', new Date());
 
-	  gtag('config', 'UA-122243940-1');
-	</script>
+  	gtag('config', 'UA-50714507-1');
+</script>
+
 
 </head>
 
@@ -58,10 +59,7 @@
 <!-- begin menu mobile -->
 
 <div class="container-menu-bar-mobile menu-mobile-transparent menu-mobile-sticky">
-	<div class="item-logo">
-		<a href="../index.html">
-			<img src="assets/img/logo-red.png" alt="logo">
-		</a>
+	
 	</div>
 	<div class="item-icon">
 		<div class="bar1"></div>
@@ -84,9 +82,7 @@
 <!-- begin menu desktop -->
 <div class="container-menu-desktop menu-desktop-transparent menu-desktop-sticky">
 	<div class="item-logo">
-		<a href="../index.html">
-			<img src="assets/img/logo-red.png" alt="logo">
-		</a>
+		
 	</div>
 	<div class="item-menu">
 		<ul>
@@ -104,16 +100,16 @@
 
 
 <div class="hero-block-5">
-	<div class="slide-in-top">
-		<h1>Portfolio</h1>
-		<h2>Welcome to a selection of my web design and development work.</h2>
+	<div class="full">
+		<h1> LOGO - PACKAGING - TYPE <br> CREATIVITY - INTELLIGENCE <br> COLOUR - PRINT - DIGITAL <br> BRIEF - PRESENTATION </h1>
+		<h2></h2>
 	</div>
 </div>
 
 
 <div class="container-wide">
 
-	<p class="note">(<b>NOTE</B>: See alternative versions:  <a href="index-1.html">here</a> and  <a href="index-3.html">here</a>.)</p>
+	
 
 	<div class="flex-grid-three">
 
@@ -210,7 +206,7 @@
 
 			<h4>CONTACT</h4>
 
-			<p><i class="fa fa-envelope"></i>&nbsp;&nbsp;<a href="mailto:ibat.training@gmail.com">Email</a></p>
+			<p><i class="fa fa-envelope"></i>&nbsp;&nbsp;<a href="mailto:filferrero@gmail.com">Email</a></p>
 
 			<p><i class="fa fa-github-square"></i>&nbsp;&nbsp;<a href="https://www.github.com/ibat-web-dev" target="_blank">GitHub</a></p>
 
