--- a/privacy.html
+++ b/privacy.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Legal and Privacy Statement | Mary Smith | Portfolio Website</title>
+	<title> Legal and Privacy Statement | Filippo Ferrero | Portfolio Website</title>
 	<meta name="description" content="Legal and Privacy Statement for this website">
 
 	<meta name="author" content="filferrero">
@@ -35,7 +35,7 @@
 
 <div class="container-menu-bar-mobile menu-mobile-dark menu-mobile-sticky">
 	<div class="item-logo">
-		<a href="index.html"><img src="assets/img/logo-blue.png" alt="logo"></a>
+		<a href="index.html"><img  alt="logo"></a>
 	</div>
 	<div class="item-icon">
 		<div class="bar1"></div>
@@ -59,7 +59,7 @@
 <div class="container-menu-desktop menu-desktop-dark menu-desktop-sticky">
 	<div class="item-logo">
 		<a href="index.html">
-			<img src="assets/img/logo-blue.png" alt="logo">
+			<alt="logo">
 		</a>
 	</div>
 	<div class="item-menu">
