--- a/privacy.html
+++ b/privacy.html
@@ -46,7 +46,7 @@
 
 <div class="container-menu-options-mobile menu-mobile-dark">
 	<ul>
-		<li><a href="index.html">Home</a></li>
+		<li><a href="portfolio/index.html">Home</a></li>
 		<li><a href="portfolio/index.html">Portfolio</a></li>
 		<li><a href="privacy.html">Privacy</a></li>
 		<li><a href="contact.html" class="btn-solid btn-rounded">Get in touch</a></li>
@@ -64,7 +64,7 @@
 	</div>
 	<div class="item-menu">
 		<ul>
-			<li><a href="index.html">Home</a></li>
+			<li><a href="portfolio/index.html">Home</a></li>
 			<li><a href="portfolio/index.html">Portfolio</a></li>
 			<li><a href="privacy.html">Privacy</a></li>
 			<li><a href="contact.html" class="btn-solid btn-rounded">Get in touch</a></li>
@@ -176,8 +176,8 @@
 
 		<div class="col-gutter">
 			<h4>SITE MAP</h4>
-			<p><i class="fa fa-home" aria-hidden="true"></i>&nbsp;&nbsp;<a href="index.html">Home</a></p>
-			<p><i class="fa fa-file" aria-hidden="true"></i>&nbsp;&nbsp;<a href="portfolio/index.html">Portfolio</a></p>
+			<p><i class="fa fa-home" aria-hidden="true"></i>&nbsp;&nbsp;<a href="../portfolio/index.html">Home</a></p>
+			<p><i class="fa fa-file" aria-hidden="true"></i>&nbsp;&nbsp;<a href="../portfolio/index.html">Portfolio</a></p>
 			<p><i class="fa fa-lock" aria-hidden="true"></i>&nbsp;&nbsp;<a href="privacy.html">Privacy</a></p>
 		</div><!-- /column -->
 
