--- a/portfolio/type.html
+++ b/portfolio/type.html
@@ -10,7 +10,7 @@
 
 	<meta name="author" content="Filippo Ferrero">
 
-	<link rel="stylesheet" href="assets/css/portfolio-2.css">
+	<link rel="stylesheet" href="assets/css/portfolio-type.css">
 
 	<style>
 		p.note { text-align:center; margin-bottom:32px }
@@ -101,84 +101,45 @@
 
 <div class="hero-block-5">
 	<div class="full">
-		<h1> LOGO - PACKAGING - TYPE <br> CREATIVITY - INTELLIGENCE <br> COLOUR - PRINT - DIGITAL <br> BRIEF - PRESENTATION </h1>
-		<h2></h2>
+		
+	</div>
+</div>
+
+<div class="hero-block-6">
+   <div class="full">
+    <h3>  Giambattista Bodoni in his typographic manual has described in four words, the correct ingredients for a better font construction:
+    <br><it>Regolarità - Nettezza/Forbitura - Buon Gusto - Grazia<it><br>
+    I understood how important are the fonts, how much they have changed over the years, but also as an old capacity for building them, like that of the great Masters: 
+    <br><it>Bodoni, Didot, Baskerville, Caslon<it><br> has never been replicated in a technologically advanced present. </h3>
+	</div>
+</div>
+
+<div class="hero-block-6">
+	<div class="full">
+		
+    <p class="full">GELSOMINO ROBERTO</p>
+      <img2 src="assets/img/TYPE_GelsominoRoberto.jpg" class="img-fluid images-shadow" alt=""  >
 	</div>
 </div>
 
 
-<div class="container-wide">
+
+<div>
+    <p class="style2">PIN FONT Here we Are</p>
+      <img src="assets/img/TYPE/TYPE_PinFont.jpg" alt="" style="width:95%" >
+</div>
+
+<div>
+    <p class="style2">AUREO</p>
+      <img src="assets/img/TYPE/TYPE_Aureo.jpg" alt="" style="width:95%" >
+</div>
+
+<div>
+    <p class="style2">TODONI an Italian in Toronto</p>
+      <img src="assets/img/TYPE/TYPE_Todoni.jpg" alt="" style="width:95%" >
+</div>
 
 	
-
-	<div class="flex-grid-three">
-
-		<div class="col-gutter">
-			<a href="../portfolio/type.html">
-				<img src="assets/img/portfolio-setup.png"  
-				class="img-fluid images-shadow"  alt="portfolio careers summit">
-			</a>
-			<h3>TYPE</h3>
-			<p> A responsive web page with images and hyperlinks. Created in HTML and CSS with the 
-				<a class="fancy-link" href="https://www.sublimetext.com/" target="_blank">Sublime Text</a> editor.</p>
-			<a class="btn-ghost btn-rounded" href="../portfolio/type.html">View web page</a>
-		</div>
-
-		<div class="col-gutter">
-			<a href="../tourism.html">
-				<img src="assets/img/tourism.png" class="img-fluid images-shadow"  alt="portfolio powerpoint">
-			</a>
-			<h3>Irish Tourism</h3>
-			<p>A responsive web page with external hyperlinks that showcases Ireland&#8217;s most-visited tourist destinations.</p>
-			<a class="btn-ghost btn-rounded" href="../tourism.html">View web page</a>
-		</div>
-
-		<div class="col-gutter">
-			<a href="../hero/index.html">
-				<img src="assets/img/portfolio-hero.png" class="img-fluid images-shadow"  alt="portfolio hero">
-			</a>
-			<h3>Hero Blocks</h3>
-			<p>Landing page hero blocks with various fonts, alignments and background colours, gradients and images.</p>
-			<a class="btn-ghost btn-rounded" href="../hero/index.html">View web page</a>
-		</div>
-
-	</div><!--- /flex-grid -->
-
-</div><!--- /container -->
-
-
-<div class="container-wide">
-
-	<div class="flex-grid-three">
-
-		<div class="col-gutter">
-			<a href="../menus/menu-desktop-1.html">
-				<img src="assets/img/portfolio-menus.png" class="img-fluid images-shadow"  alt="portfolio flexbox columns">
-			</a>
-			<h3>Desktop and Mobile Menus</h3>
-			<p>Navigation menus for desktop and mobile screens. Includes on-scroll background colour change options in JavaScript.</p>
-			<a class="btn-ghost btn-rounded" href="../menus/menu-desktop-1.html">View web page</a>
-		</div>
-
-		<div class="col-gutter">
-			<a href="../project-sample-1/index.html">
-				<img src="assets/img/sample-website-1.png" class="img-fluid images-shadow"  alt="portfolio final project 1">
-			</a>
-			<h3>Final Project (1)</h3>
-			<p>Three-page website for a fictitious global travel agency.</p>
-			<a  class="btn-ghost btn-rounded" href="../project-sample-1/index.html">View web page</a>
-		</div>
-
-		<div class="col-gutter">
-			<a href="../project-sample-2/index.html">
-				<img src="assets/img/sample-website-2.png" class="img-fluid images-shadow"  alt="portfolio final project 2">
-			</a>
-			<h3>Final Project (2)</h3>
-			<p>Three-page website for a fictitious digital design and marketing agency.</p>
-			<a class="btn-ghost btn-rounded" href="../project-sample-2/index.html">View web page</a>
-		</div>
-
-	</div><!--- /flex-grid -->
 
 </div><!--- /container -->
 
