--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Get in touch | Mary Smith | Web Design Portfolio</title>
-	<meta name="description" content="Contact page for Portfolio of Mary Smith">
+	<title>Get in touch | Filippo Ferrero | Web Design Portfolio</title>
+	<meta name="description" content="Contact page for Portfolio of Filippo Ferrero">
 
-	<meta name="author" content="Mary Smith">
+	<meta name="author" content="filferrero">
 
 	<link rel="stylesheet" href="assets/css/contact.css">
 
@@ -55,7 +55,7 @@
 
 <div class="container-menu-bar-mobile menu-mobile-dark menu-mobile-sticky">
 	<div class="item-logo">
-		<img src="assets/img/logo-blue-2.png" alt="logo">
+		<img src="" alt="logo">
 	</div>
 	<div class="item-icon">
 		<div class="bar1"></div>
@@ -78,8 +78,8 @@
 <!-- begin menu desktop -->
 <div class="container-menu-desktop menu-desktop-dark menu-desktop-sticky">
 	<div class="item-logo">
-		<a href="index.html">
-			<img src="assets/img/logo-blue-2.png" alt="logo">
+		<a href="">
+			<img src="" alt="logo">
 		</a>
 	</div>
 	<div class="item-menu">
@@ -161,16 +161,20 @@
 
 		<div class="col-gutter">
 			<h4>ABOUT ME</h4>
-			<p>Hi, I'm Mary Smith. I'm a web designer and developer.</p>
-			<p>I created this website to showcase some of the projects I have created.</p>
+			<p>Highly ambitious and extremely talented graphic designer bringing with me over ten years of Italian International experience as well as continued education to my role. <br> Art and design literally flows in my blood. 
+			I strive to master the art of all mediums of communications and advertising. 
+			<br>I love the challenges that each new project brings. 
+			</p>
 		</div><!-- /column -->
 
 
 		<div class="col-gutter">
 			<h4>CONTACT</h4>
-			<p><i class="fa fa-envelope"></i>&nbsp;&nbsp;<a href="mailto:ibat.training@gmail.com">Email</a></p>
-			<p><i class="fa fa-github-square"></i>&nbsp;&nbsp;<a href="https://www.github.com/ibat-web-dev" target="_blank">GitHub</a></p>
-			<p><i class="fa fa-linkedin"></i>&nbsp;&nbsp;<a href="https://ie.linkedin.com/school/ibat-college-dublin/" target="_blank">Linkedin</a></p>
+			<p><i class="fa fa-envelope"></i>&nbsp;&nbsp;<a href="mailto:filferrero@gmail.com">Email</a></p>
+
+			<p><i class="fa fa-github-square"></i>&nbsp;&nbsp;<a href="https://github.com/filferrero/filferrero.github.io" target="_blank">GitHub</a></p>
+
+			<p><i class="fa fa-linkedin"></i>&nbsp;&nbsp;<a href="https://www.linkedin.com/in/filippo-ferrero-99670257/" target="_blank">Linkedin</a></p>
 		</div><!-- /column -->
 
 	</div><!-- /flexgrid -->
