--- a/privacy.html
+++ b/privacy.html
@@ -183,16 +183,20 @@
 
 		<div class="col-gutter">
 			<h4>ABOUT ME</h4>
-			<p>Hi, I'm Mary Smith. I'm a web designer and developer.</p>
-			<p>I created this website to showcase some of the projects I have created.</p>
+			<p>Highly ambitious and extremely talented graphic designer bringing with me over ten years of Italian International experience as well as continued education to my role. <br> Art and design literally flows in my blood. 
+			I strive to master the art of all mediums of communications and advertising. 
+			<br>I love the challenges that each new project brings. 
+			</p>
 		</div><!-- /column -->
 
 
 		<div class="col-gutter">
 			<h4>CONTACT</h4>
 			<p><i class="fa fa-envelope"></i>&nbsp;&nbsp;<a href="mailto:filferrero@gmail.com">Email</a></p>
-			<p><i class="fa fa-github-square"></i>&nbsp;&nbsp;<a href="https://www.github.com/ibat-web-dev" target="_blank">GitHub</a></p>
-			<p><i class="fa fa-linkedin"></i>&nbsp;&nbsp;<a href="" target="_blank">Linkedin</a></p>
+
+			<p><i class="fa fa-github-square"></i>&nbsp;&nbsp;<a href="https://github.com/filferrero/filferrero.github.io" target="_blank">GitHub</a></p>
+
+			<p><i class="fa fa-linkedin"></i>&nbsp;&nbsp;<a href="https://www.linkedin.com/in/filippo-ferrero-99670257/" target="_blank">Linkedin</a></p>
 		</div><!-- /column -->
 
 	</div><!-- /flexgrid -->
