--- a/portfolio/logo.html
+++ b/portfolio/logo.html
@@ -10,7 +10,7 @@
 
 	<meta name="author" content="Filippo Ferrero">
 
-	<link rel="stylesheet" href="assets/css/portfolio-2.css">
+	<link rel="stylesheet" href="assets/css/portfolio-logo.css">
 
 	<style>
 		p.note { text-align:center; margin-bottom:32px }
@@ -101,144 +101,141 @@
 
 <div class="hero-block-5">
 	<div class="full">
-		<h1> LOGO - PACKAGING - TYPE <br> CREATIVITY - INTELLIGENCE <br> COLOUR - PRINT - DIGITAL <br> BRIEF - PRESENTATION </h1>
-		<h2></h2>
+		
 	</div>
 </div>
 
+<div class="container">
+    <h3>  I have done different Logos for every kind of business. <br>
+	Creativity and mathematics have to merge for creating something special never been existed before and customized on the client characteristics. </h3>
+</div>
 
 <div class="container-wide">
-
 	
 	<div class="flex-grid-three" >
 
 		<div class="col-gutter">
-			<a href="../portfolio/type.html">
-				<img src="assets/img/portfolio-setup.png"  
+				<img src="assets/img/molinicertosa.jpg"  
 				class="img-fluid images-shadow"  alt="portfolio careers summit">
 			</a>
-			<h3>TYPE</h3>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/type.html"></a>
+			<h3> MOLINI CERTOSA </h3>
+			<p>  Flour mills company  </p>
 		</div>
 
 	<div class="col-gutter">
-			<a href="../portfolio/logo.html">
-				<img src="assets/img/portfolio-logo.jpg"  
+				<img src="assets/img/Cliniquenaturelle.jpg"  
 				class="img-fluid images-shadow"  alt="portfolio careers summit">
 			</a>
-			<h3>LOGO</h3>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/logo.html"></a>
+			<h3> CLINIQUE NATURELLE </h3>
+			<p>  Aesthetic medicine  </p>
 		</div>
 
 	<div class="col-gutter">
-			<a href="../portfolio/packaging.html">
-				<img src="assets/img/portfolio-pack.jpg"  
+				<img src="assets/img/Adamantis.jpg"  
 				class="img-fluid images-shadow"  alt="portfolio careers summit">
 			</a>
-			<h3> PACKAGING </h3>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/packaging.html"></a>
-		</div>		
-
+			<h3> ADAMANTIS </h3>
+			<p>  Personal assistant  </p>
+		</div>
 </div>
 
-
-
 <div class="container">
-
 	
-
 	<div class="flex-grid-three" >
 
 		<div class="col-gutter">
-			<a href="../portfolio/editorial.html">
-				<img src="assets/img/portfolio-Editorial.jpg"  
+				<img src="assets/img/MichelaCattai.jpg"  
 				class="img-fluid images-shadow"  alt="portfolio careers summit">
 			</a>
-			<h3> EDITORIAL </h3>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/editorial.html"></a>
-		</div>		
+			<h3> MICHELA CATTAI </h3>
+			<p>  Milan Art Gallery  </p>
+		</div>
 
 	<div class="col-gutter">
-			<a href="../portfolio/ADV.html">
-				<img src="assets/img/portfolio-ADV.jpg"  
+				<img src="assets/img/Movimento Mistrale.jpg"  
 				class="img-fluid images-shadow"  alt="portfolio careers summit">
 			</a>
-			<h3> ADV </h3>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/ADV.html"></a>
-		</div>		
+			<h3> MOVIMENTO MISTRALE </h3>
+			<p>  Artistic movement  </p>
+		</div>
 
 	<div class="col-gutter">
-			<a href="../portfolio/type.html">
-				<img src="assets/img/portfolio-costr.jpg"  
+				<img src="assets/img/MarioCrosta.jpg"  
 				class="img-fluid images-shadow"  alt="portfolio careers summit">
 			</a>
-			<h3>under construction</h3>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/type.html"></a>
-		</div>		
+			<h3> MARIO CROSTA </h3>
+			<p>  Textile processing industry  </p>
+		</div>
 
 </div>
 
 <div class="container">
-
 	
-
 	<div class="flex-grid-three" >
 
 		<div class="col-gutter">
-			<a href="../portfolio/type.html">
-				<img src="assets/img/portfolio-costr.jpg"  
+				<img src="assets/img/SheepScab Bimeda.jpg"  
 				class="img-fluid images-shadow"  alt="portfolio careers summit">
 			</a>
-			<h3>under construction</h3>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/type.html"></a>
-		</div>		
+			<h3> BIMEDA </h3>
+			<p>  Sheep Scab Accademy  </p>
+		</div>
 
 	<div class="col-gutter">
-			<a href="../portfolio/type.html">
-				<img src="assets/img/portfolio-costr.jpg"  
+				<img src="assets/img/Languageschool.jpg"  
 				class="img-fluid images-shadow"  alt="portfolio careers summit">
 			</a>
-			<h3>under construction</h3>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/type.html"></a>
-		</div>		
+			<h3> LANGUAGE SERVICE </h3>
+			<p>  Language school  </p>
+		</div>
 
 	<div class="col-gutter">
-			<a href="../portfolio/type.html">
-				<img src="assets/img/portfolio-costr.jpg"  
+				<img src="assets/img/ItalyJapan150th.jpg"  
 				class="img-fluid images-shadow"  alt="portfolio careers summit">
 			</a>
-			<h3>under construction</h3>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/type.html"></a>
-		</div>		
+			<h3> ITALY-JAPAN </h3>
+			<p>  Italy Japan 150th  </p>
+		</div>
 
 </div>
 
 
-<!--- /flex-grid -->
+<div class="container">
+	
+	<div class="flex-grid-three" >
+
+		<div class="col-gutter">
+				<img src="assets/img/monterosso.jpg"  
+				class="img-fluid images-shadow"  alt="portfolio careers summit">
+			</a>
+			<h3> MONTEROSSO </h3>
+			<p>  Chemical company  </p>
+		</div>
+
+	<div class="col-gutter">
+				<img src="assets/img/Fubanyl.jpg"  
+				class="img-fluid images-shadow"  alt="portfolio careers summit">
+			</a>
+			<h3> FUBANYL </h3>
+			<p>  Polymer industry  </p>
+		</div>
+
+	<div class="col-gutter">
+				<img src="assets/img/terroni.jpg"  
+				class="img-fluid images-shadow"  alt="portfolio careers summit">
+			</a>
+			<h3> TERRONI </h3>
+			<p>  Italian Canedian Restourant </p>
+		</div>
+
+</div>
+
+
+
+
+
 
 <!--- /container -->
-
-<!--- /flex-grid -->
-
-</div><!--- /container -->
 
 <div class="container-footer">
 
@@ -256,7 +253,7 @@
 		
 		</div><!-- /column -->
 
-			<div class="col-gutter">
+		<div class="col-gutter">
 			<h4>ABOUT ME</h4>
 			<p>Highly ambitious and extremely talented graphic designer bringing with me over ten years of Italian International experience as well as continued education to my role. <br> Art and design literally flows in my blood. 
 			I strive to master the art of all mediums of communications and advertising. 
