--- a/portfolio/packaging.html
+++ b/portfolio/packaging.html
@@ -10,7 +10,7 @@
 
 	<meta name="author" content="Filippo Ferrero">
 
-	<link rel="stylesheet" href="assets/css/portfolio-2.css">
+	<link rel="stylesheet" href="assets/css/portfolio-packaging.css">
 
 	<style>
 		p.note { text-align:center; margin-bottom:32px }
@@ -101,142 +101,32 @@
 
 <div class="hero-block-5">
 	<div class="full">
-		<h1> LOGO - PACKAGING - TYPE <br> CREATIVITY - INTELLIGENCE <br> COLOUR - PRINT - DIGITAL <br> BRIEF - PRESENTATION </h1>
-		<h2></h2>
+		
 	</div>
 </div>
 
-
-<div class="container-wide">
-
-	
-	<div class="flex-grid-three" >
-
-		<div class="col-gutter">
-			<a href="../portfolio/type.html">
-				<img src="assets/img/portfolio-setup.png"  
-				class="img-fluid images-shadow"  alt="portfolio careers summit">
-			</a>
-			<h3>TYPE</h3>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/type.html"></a>
-		</div>
-
-	<div class="col-gutter">
-			<a href="../portfolio/logo.html">
-				<img src="assets/img/portfolio-logo.jpg"  
-				class="img-fluid images-shadow"  alt="portfolio careers summit">
-			</a>
-			<h3>LOGO</h3>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/logo.html"></a>
-		</div>
-
-	<div class="col-gutter">
-			<a href="../portfolio/packaging.html">
-				<img src="assets/img/portfolio-pack.jpg"  
-				class="img-fluid images-shadow"  alt="portfolio careers summit">
-			</a>
-			<h3> PACKAGING </h3>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/packaging.html"></a>
-		</div>		
-
-</div>
-
-
-
 <div class="container">
-
-	
-
-	<div class="flex-grid-three" >
-
-		<div class="col-gutter">
-			<a href="../portfolio/editorial.html">
-				<img src="assets/img/portfolio-Editorial.jpg"  
-				class="img-fluid images-shadow"  alt="portfolio careers summit">
-			</a>
-			<h3> EDITORIAL </h3>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/editorial.html"></a>
-		</div>		
-
-	<div class="col-gutter">
-			<a href="../portfolio/ADV.html">
-				<img src="assets/img/portfolio-ADV.jpg"  
-				class="img-fluid images-shadow"  alt="portfolio careers summit">
-			</a>
-			<h3> ADV </h3>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/ADV.html"></a>
-		</div>		
-
-	<div class="col-gutter">
-			<a href="../portfolio/type.html">
-				<img src="assets/img/portfolio-costr.jpg"  
-				class="img-fluid images-shadow"  alt="portfolio careers summit">
-			</a>
-			<h3>under construction</h3>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/type.html"></a>
-		</div>		
-
+    <h3>  The primary function of the packaging is protecting the product, at the same time it has to be Branding supporting. <br> I have been working for any type of packaging, from the food to the industrial,  from concept to print, with my experience, <br>I can follow every step for developing a winner Packaging.</h3>
 </div>
 
-<div class="container">
+<div class="container"> <h4> FOOD PACKAGING </h4> </div>
 
-	
-
-	<div class="flex-grid-three" >
-
-		<div class="col-gutter">
-			<a href="../portfolio/type.html">
-				<img src="assets/img/portfolio-costr.jpg"  
-				class="img-fluid images-shadow"  alt="portfolio careers summit">
-			</a>
-			<h3>under construction</h3>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/type.html"></a>
-		</div>		
-
-	<div class="col-gutter">
-			<a href="../portfolio/type.html">
-				<img src="assets/img/portfolio-costr.jpg"  
-				class="img-fluid images-shadow"  alt="portfolio careers summit">
-			</a>
-			<h3>under construction</h3>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/type.html"></a>
-		</div>		
-
-	<div class="col-gutter">
-			<a href="../portfolio/type.html">
-				<img src="assets/img/portfolio-costr.jpg"  
-				class="img-fluid images-shadow"  alt="portfolio careers summit">
-			</a>
-			<h3>under construction</h3>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/type.html"></a>
-		</div>		
-
+<div class= "">
+<img src="assets/img/PackA.jpg" style="width:100%" alt=""  >
 </div>
 
 
-<!--- /flex-grid -->
+<div class="container"> <h4> INDUSTRIAL PACKAGING </h4> </div>
 
-<!--- /container -->
+<div class= "">
+<img src="assets/img/PackB.jpg" style="width:100%" alt=""  >
+<img src="assets/img/PackC.jpg" style="width:100%" alt=""  >
+</div>
 
-<!--- /flex-grid -->
+
+
+
+	
 
 </div><!--- /container -->
 
@@ -256,7 +146,7 @@
 		
 		</div><!-- /column -->
 
-			<div class="col-gutter">
+		<div class="col-gutter">
 			<h4>ABOUT ME</h4>
 			<p>Highly ambitious and extremely talented graphic designer bringing with me over ten years of Italian International experience as well as continued education to my role. <br> Art and design literally flows in my blood. 
 			I strive to master the art of all mediums of communications and advertising. 
