--- a/portfolio/type.html
+++ b/portfolio/type.html
@@ -105,39 +105,40 @@
 	</div>
 </div>
 
-<div class="hero-block-6">
-   <div class="full">
+<div class="container">
     <h3>  Giambattista Bodoni in his typographic manual has described in four words, the correct ingredients for a better font construction:
     <br><it>Regolarità - Nettezza/Forbitura - Buon Gusto - Grazia<it><br>
     I understood how important are the fonts, how much they have changed over the years, but also as an old capacity for building them, like that of the great Masters: 
     <br><it>Bodoni, Didot, Baskerville, Caslon<it><br> has never been replicated in a technologically advanced present. </h3>
-	</div>
 </div>
 
-<div class="hero-block-6">
-	<div class="full">
-		
-    <p class="full">GELSOMINO ROBERTO</p>
-      <img2 src="assets/img/TYPE_GelsominoRoberto.jpg" class="img-fluid images-shadow" alt=""  >
-	</div>
+<div class="container"> <h4> GELSOMINO ROBERTO </h4> </div>
+
+<div class= "">
+<img src="assets/img/TYPE_GelsominoRoberto.jpg" style="width:100%" alt=""  >
 </div>
 
 
+<div class="container"> <h4> PIN FONT Here we Are </h4> </div>
 
-<div>
-    <p class="style2">PIN FONT Here we Are</p>
-      <img src="assets/img/TYPE/TYPE_PinFont.jpg" alt="" style="width:95%" >
+<div class= "">
+<img src="assets/img/TYPE_PinFont.jpg" style="width:100%" alt=""  >
 </div>
 
-<div>
-    <p class="style2">AUREO</p>
-      <img src="assets/img/TYPE/TYPE_Aureo.jpg" alt="" style="width:95%" >
+<div class="container"> <h4> AUREO </h4> </div>
+
+<div class= "">
+<img src="assets/img/TYPE_Aureo.jpg" style="width:100%" alt=""  >
 </div>
 
-<div>
-    <p class="style2">TODONI an Italian in Toronto</p>
-      <img src="assets/img/TYPE/TYPE_Todoni.jpg" alt="" style="width:95%" >
+<div class="container"> <h4> TODONI an Italian in Toronto </h4> </div>
+
+<div class= "">
+<img src="assets/img/TYPE_Todoni.jpg" style="width:100%" alt=""  >
 </div>
+
+
+
 
 	
 
@@ -161,8 +162,11 @@
 
 		<div class="col-gutter">
 			<h4>ABOUT ME</h4>
-			<p>Hi, I'm Mary Smith. I'm a web designer and developer.</p>
-			<p>I created this website to showcase some of the projects I have created.</p>
+			<p>Highly ambitious and extremely talented graphic designer bringing with me over ten years of Italian International experience as well as continued education to my role. <br> Art and design literally flows in my blood. 
+			I strive to master the art of all mediums of communications and advertising. 
+			<br>I love the challenges that each new project brings. 
+			</p>
+			
 		</div><!-- /column -->
 
 		<div class="col-gutter">
