--- a/portfolio/ADV.html
+++ b/portfolio/ADV.html
@@ -10,7 +10,7 @@
 
 	<meta name="author" content="Filippo Ferrero">
 
-	<link rel="stylesheet" href="assets/css/portfolio-2.css">
+	<link rel="stylesheet" href="assets/css/portfolio-ADV.css">
 
 	<style>
 		p.note { text-align:center; margin-bottom:32px }
@@ -101,142 +101,32 @@
 
 <div class="hero-block-5">
 	<div class="full">
-		<h1> LOGO - PACKAGING - TYPE <br> CREATIVITY - INTELLIGENCE <br> COLOUR - PRINT - DIGITAL <br> BRIEF - PRESENTATION </h1>
-		<h2></h2>
+		
 	</div>
 </div>
 
-
-<div class="container-wide">
-
-	
-	<div class="flex-grid-three" >
-
-		<div class="col-gutter">
-			<a href="../portfolio/type.html">
-				<img src="assets/img/portfolio-setup.png"  
-				class="img-fluid images-shadow"  alt="portfolio careers summit">
-			</a>
-			<h3>TYPE</h3>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/type.html"></a>
-		</div>
-
-	<div class="col-gutter">
-			<a href="../portfolio/logo.html">
-				<img src="assets/img/portfolio-logo.jpg"  
-				class="img-fluid images-shadow"  alt="portfolio careers summit">
-			</a>
-			<h3>LOGO</h3>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/logo.html"></a>
-		</div>
-
-	<div class="col-gutter">
-			<a href="../portfolio/packaging.html">
-				<img src="assets/img/portfolio-pack.jpg"  
-				class="img-fluid images-shadow"  alt="portfolio careers summit">
-			</a>
-			<h3> PACKAGING </h3>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/packaging.html"></a>
-		</div>		
-
-</div>
-
-
-
 <div class="container">
-
-	
-
-	<div class="flex-grid-three" >
-
-		<div class="col-gutter">
-			<a href="../portfolio/editorial.html">
-				<img src="assets/img/portfolio-Editorial.jpg"  
-				class="img-fluid images-shadow"  alt="portfolio careers summit">
-			</a>
-			<h3> EDITORIAL </h3>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/editorial.html"></a>
-		</div>		
-
-	<div class="col-gutter">
-			<a href="../portfolio/ADV.html">
-				<img src="assets/img/portfolio-ADV.jpg"  
-				class="img-fluid images-shadow"  alt="portfolio careers summit">
-			</a>
-			<h3> ADV </h3>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/ADV.html"></a>
-		</div>		
-
-	<div class="col-gutter">
-			<a href="../portfolio/type.html">
-				<img src="assets/img/portfolio-costr.jpg"  
-				class="img-fluid images-shadow"  alt="portfolio careers summit">
-			</a>
-			<h3>under construction</h3>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/type.html"></a>
-		</div>		
-
+    <h3>  Finding images and think about what the people want, is the winner mix for creating endearing advertise. <br>
+	From the brief to the artwork, merge the client request with my imagination is my target.<br> During the years I have done every type of advertising, for magazine and newspaper, flyer, mailing and poster.</h3>
 </div>
 
-<div class="container">
+<div class="container"> <h4>  </h4> </div>
 
-	
+<div class= "">
+<img src="assets/img/Ballantines.jpg" style="width:100%" alt=""  >
+<img src="assets/img/Bimeda Animal ADV.jpg" style="width:100%" alt=""  >
+<img src="assets/img/Bimeda Animal Vitamin B1.jpg" style="width:100%" alt=""  >
+<img src="assets/img/Bimeda Animal Product.jpg" style="width:100%" alt=""  >
+<img src="assets/img/Language school ADV.jpg" style="width:100%" alt=""  >
 
-	<div class="flex-grid-three" >
 
-		<div class="col-gutter">
-			<a href="../portfolio/type.html">
-				<img src="assets/img/portfolio-costr.jpg"  
-				class="img-fluid images-shadow"  alt="portfolio careers summit">
-			</a>
-			<h3>under construction</h3>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/type.html"></a>
-		</div>		
-
-	<div class="col-gutter">
-			<a href="../portfolio/type.html">
-				<img src="assets/img/portfolio-costr.jpg"  
-				class="img-fluid images-shadow"  alt="portfolio careers summit">
-			</a>
-			<h3>under construction</h3>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/type.html"></a>
-		</div>		
-
-	<div class="col-gutter">
-			<a href="../portfolio/type.html">
-				<img src="assets/img/portfolio-costr.jpg"  
-				class="img-fluid images-shadow"  alt="portfolio careers summit">
-			</a>
-			<h3>under construction</h3>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/type.html"></a>
-		</div>		
 
 </div>
 
 
-<!--- /flex-grid -->
 
-<!--- /container -->
 
-<!--- /flex-grid -->
+	
 
 </div><!--- /container -->
 
@@ -256,7 +146,7 @@
 		
 		</div><!-- /column -->
 
-			<div class="col-gutter">
+		<div class="col-gutter">
 			<h4>ABOUT ME</h4>
 			<p>Highly ambitious and extremely talented graphic designer bringing with me over ten years of Italian International experience as well as continued education to my role. <br> Art and design literally flows in my blood. 
 			I strive to master the art of all mediums of communications and advertising. 
