--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -19,6 +19,9 @@
 	<!-- Link to icons for Font Awesome 4 -->
 	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
+	<link href="https://fonts.googleapis.com/css?family=Hepta+Slab&display=swap" rel="stylesheet">
+
+
 	<!-- Cookie consent code-->
 	<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.css" />
 	<script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.js"></script>
@@ -101,11 +104,50 @@
 
 <div class="hero-block-5">
 	<div class="full">
-		<h1> LOGO - PACKAGING - TYPE <br> CREATIVITY - INTELLIGENCE <br> COLOUR - PRINT - DIGITAL <br> BRIEF - PRESENTATION </h1>
+		<h1>  </h1>
 		<h2></h2>
 	</div>
 </div>
 
+<div class="container-wide">
+		<div class="flex-grid-three" >
+
+	<div class="col-gutter">
+	<h1> Highly ambitious and extremely talented graphic designer bringing with me over ten years of Italian International experience as well as continued education to my role. <br>Art and design literally flows in my blood, since my grandpa in Milan was a graphic designer around the ‘60. </h1> 
+	<img src="assets/img/Nonno_C.jpg" class="img-fluid images-shadow">
+<h1> I am passionate and driven about creating and designing. I love the challenges that each new project brings. For me, every shape, every font and every color, must be thoroughly explored in order to find the client their winning combination.</h1> 
+</div>
+
+
+<div class="col-gutter" >
+	<a href="../portfolio/type.html">
+				<img src="assets/img/portfolio-setup.png"  
+				class="img-fluid images-shadow"  alt="portfolio careers summit">
+			</a>
+			<h3>TYPE</h3>
+			<p> 
+				<a class="fancy-link" href="" target="_blank"></a> </p>
+			<a class="" href="../portfolio/type.html"></a>
+
+</div>
+
+<div class="col-gutter">
+ 
+<a href="../portfolio/logo.html">
+				<img src="assets/img/portfolio-logo.jpg"  
+				class="img-fluid images-shadow"  alt="portfolio careers summit">
+			</a>
+			<h3>LOGO</h3>
+			<p> 
+				<a class="fancy-link" href="" target="_blank"></a> </p>
+			<a class="" href="../portfolio/logo.html"></a>
+		</div> 
+
+
+
+
+
+</div> 
 
 <div class="container-wide">
 
